# boost-act

./: .actrc  .envrc  .flake8  .gitignore  1  998_4-12-2023_Sleep.csv  AGENTS.md  README.md  ROADMAP-dsmc.md  R_requirements.R  cron.sh  cron_local.sh  data.json  determine_run_fix.md  dockerfile  flake.nix  gt3x_durations.csv  int_put_back.csv  log.txt  new_feature_working.md  obs_put_back.csv  pyproject.toml  requirements.txt  run.job  temp.R  temp.py  test.md  transfer_script.sh
.codex/: config.toml  models_cache.json  session_index.jsonl  version.json
.codex/shell_snapshots/: 019cd86f-5e30-7db0-ab95-9c45e495f835.sh  019cd86f-79e3-7dd2-8c7d-c388b8e4df95.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: dl7r3gb1anbvs2nbrmy6b5qyrikpfk2p-source  fm6sxqrfmq0bvx4blmzfzp9w17hj81g5-source  mv6bdcrsxmjz2l32vnsl0m8dlf287vzn-source  zsl1df4w92y1806snrgbq8a87f9948ya-source
.github/workflows/: main.yml  pr-testing-suite.yml
.ipynb_checkpoints/: gt3x_durations-checkpoint.csv
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
act/: __init__.py  data.json  main.py  requirements.txt
act/core/: acc_new.R  (+6 more)
code/: data.json  dockerfile  dsmc_counts.py  main.py  orchestrate.py  run_gg_temp.py
docs/: architecture.md  cli.md  sql.md  system.md
mnt/: int_dir  int_dir 2  obs_dir  rdss_dir  rdss_dir 2
res/: data.json
scripts/: setup_vosslnxft_dirs.sh  transfer.sh
tests/: new_gg_notes.md  new_gg_scriptable.R
(+111 files in other folders)
