[tool.poetry]
name = "accelerometer qa service"
version = "0.1.0"
description = ""
authors = ["zak zakgilliam@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.pytest.ini_options]
testpaths = ["act/tests"]
python_files = ["test_*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
